--- a/cooltxt.html
+++ b/cooltxt.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="cooltxt.css">
 </head>
 <body>
-    <header>
-        <h3>12c_02_01 Cooltext</h3>
-    </header>
-
-    <section>
-        <h1>This text should fade from the bottom</h1>
-    </section>
+    
+        <section>
+            <h1 id="cooltxt">This text should fade from the bottom</h1>
+        </section>
 
     <script src="cooltxt.js"></script>
 </body>
